[gd_scene load_steps=7 format=2]

[ext_resource path="res://Weapons/Player/Gun/Gun.gd" type="Script" id=1]
[ext_resource path="res://Interface/crosshair.png" type="Texture" id=2]
[ext_resource path="res://Audio/hitmarker.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/shot.wav" type="AudioStream" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.507813, 0.507813, 0.507813, 1 )
metallic_specular = 0.0

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )

[node name="Gun" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.15, 0, 0, 0, 0.6, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hitmarker" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
expand = true

[node name="HitmarkerTimer" type="Timer" parent="HUD"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource( 3 )
volume_db = 4.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HUD/HitmarkerTimer" to="." method="_on_HitmarkerTimer_timeout"]
